Bug 265408 - kmplot hangs after setting yScaling to negative value
Summary: kmplot hangs after setting yScaling to negative value
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-04 15:11 UTC by Alexander Potashev
Modified: 2014-08-17 22:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-02-04 15:11:35 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
1. go to View -> Coordinate System
2. under "Vertical axis Grid Spacing", select "Custom" and enter "-1"
3. click Apply, KmPlot hangs



Originally reported at http://www.linux.org.ru/forum/desktop/5871487
Comment 1 Christoph Feck 2014-08-17 22:02:22 UTC
Git commit 073f782f870e36787d0bb49a81e9e0f581955080 by Christoph Feck.
Committed on 17/08/2014 at 21:57.
Pushed by cfeck into branch 'KDE/4.14'.

Validate custom axis grid spacing

- limit spacing when zooming out too far
- increase spacing when zooming in too far
- only use positive spacing values
Related: bug 295006
FIXED-IN: 4.14.1

I have not found yet the conditions for single-pixel
zoom, so keeping this one open:

M  +43   -0    kmplot/view.cpp
M  +9    -0    kmplot/view.h

http://commits.kde.org/kmplot/073f782f870e36787d0bb49a81e9e0f581955080