Validate custom axis grid spacing

- limit spacing when zooming out too far
- increase spacing when zooming in too far
- only use positive spacing values

BUG: 265408
FIXED-IN: 4.14.1

I have not found yet the conditions for single-pixel
zoom, so keeping this one open:

CCBUG: 295006